# omni_robot_workspace

./: run_gazebo.sh
.catkin_tools/profiles/default/: devel_collisions.txt
src/omni_robot/: CMakeLists.txt  package.xml
src/omni_robot/config/: joint_velocity.yaml
src/omni_robot/gazebo/: omni_robot.gazebo
src/omni_robot/launch/: gazebo_description.launch  node_debug.launch  omni_rviz.launch  velocity_controller.launch
src/omni_robot/mesh/: TOP.stl  basemodified.stl  widertop.stl
src/omni_robot/urdf/: description.urdf  stand.urdf
src/omni_robot/xacro/: lidar.urdf.xacro  main.urdf.xacro  rim.urdf.xacro  roller.urdf.xacro  top.urdf.xacro
src/omni_steering_pkg/: CMakeLists.txt  package.xml
src/omni_steering_pkg/msg/: omni_velocity.msg
src/omni_steering_pkg/src/: encoder.cpp  omni_steering_test.cpp  test_node.py
src/omni_steering_pkg/src/lib/: steeringNodeHandler.cpp  steeringNodeHandler.h
